--- a/Projects/product_management/dashboard.html
+++ b/Projects/product_management/dashboard.html
@@ -1,79 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Management</title>
-    <link rel="stylesheet" href="assets/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/styles.css" />
+  </head>
+  <body>
     <h2>Welcome, <span id="username"></span></h2>
-    <form action="php/save_product.php" method="POST" enctype="multipart/form-data">
-        <label>Name:</label>
-        <input type="text" name="name" required>
-        <label>Price:</label>
-        <input type="number" step="0.01" name="price" required>
-        <label>Date:</label>
-        <input type="date" name="date" required>
-        <label>Quantity:</label>
-        <input type="number" name="quantity" required>
-        <label>Sold By:</label>
-        <select name="sold_by" id="sold_by"></select>
-        <label>Location:</label>
-        <input type="text" name="location" required>
-        <label>Image:</label>
-        <input type="file" name="img" accept="image/*" required>
-        <button type="submit">Save</button>
+    <form
+      action="php/save_product.php"
+      method="POST"
+      enctype="multipart/form-data"
+    >
+      <label>Name:</label>
+      <input type="text" name="name" required />
+      <label>Price:</label>
+      <input type="number" step="0.01" name="price" required />
+      <label>Date:</label>
+      <input type="date" name="date" required />
+      <label>Quantity:</label>
+      <input type="number" name="quantity" required />
+      <label>Sold By:</label>
+      <select name="sold_by" id="sold_by"></select>
+      <label>Location:</label>
+      <input type="text" name="location" required />
+      <label>Image:</label>
+      <input type="file" name="img" accept="image/*" required />
+      <button type="submit">Save</button>
     </form>
 
     <h2>Product List</h2>
     <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Date</th>
-                <th>Quantity</th>
-                <th>Sold By</th>
-                <th>Location</th>
-                <th>Image</th>
-            </tr>
-        </thead>
-        <tbody id="product-list"></tbody>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Date</th>
+          <th>Quantity</th>
+          <th>Sold By</th>
+          <th>Location</th>
+          <th>Image</th>
+        </tr>
+      </thead>
+      <tbody id="product-list"></tbody>
     </table>
 
-    <button onclick="window.location.href='php/export_pdf.php'">Download PDF</button>
-    <button onclick="window.location.href='php/export_excel.php'">Download Excel</button>
+    <button onclick="window.location.href='php/export_pdf.php'">
+      Download PDF
+    </button>
+    <button onclick="window.location.href='php/export_excel.php'">
+      Download Excel
+    </button>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            fetch('php/fetch_products.php')
-            .then(response => response.json())
-            .then(data => {
-                const productList = document.getElementById("product-list");
-                data.forEach(product => {
-                    const row = `<tr>
-                        <td>${product.name}</td>
-                        <td>${product.price}</td>
-                        <td>${product.date}</td>
-                        <td>${product.quantity}</td>
-                        <td>${product.sold_by}</td>
-                        <td>${product.location}</td>
-                        <td><img src="${product.img_path}" width="50"></td>
-                    </tr>`;
-                    productList.innerHTML += row;
-                });
-            });
-
-            fetch('php/auth.php')
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById("username").textContent = data.username;
-                document.getElementById("sold_by").innerHTML = `<option>${data.username}</option>`;
-            });
+      document.addEventListener("DOMContentLoaded", function () {
+    // Fetch the product data and display it in a table
+    fetch('php/fetch_products.php')
+    .then(response => response.json())
+    .then(data => {
+        const productList = document.getElementById("product-list");
+        data.forEach(product => {
+            const row = `<tr>
+                <td>${product.name}</td>
+                <td>${product.price}</td>
+                <td>${product.date}</td>
+                <td>${product.quantity}</td>
+                <td>${product.sold_by}</td>
+                <td>${product.location}</td>
+                <td><img src="${product.img_path}" width="500" alt="Product Image"></td>
+            </tr>`;
+            productList.innerHTML += row;
         });
+    });
+
+    // Fetch the list of users to populate the "Sold By" dropdown
+    fetch('php/fetch_users.php')  // New endpoint to get all users
+    .then(response => response.json())
+    .then(data => {
+        const soldByDropdown = document.getElementById("sold_by");
+
+        // First clear the existing options
+        soldByDropdown.innerHTML = '';
+
+        // Create an option for each user in the list
+        data.forEach(username => {
+            const option = document.createElement("option");
+            option.value = username;
+            option.textContent = username;
+            soldByDropdown.appendChild(option);
+        });
+
+        // Optionally set the default option to the logged-in user
+        fetch('php/auth.php')
+        .then(response => response.json())
+        .then(data => {
+            // Optionally select the logged-in user
+            const username = data.username;
+            soldByDropdown.value = username;
+        });
+    });
+
+    // Fetch auth data to display the logged-in user info
+    fetch('php/auth.php')
+    .then(response => response.json())
+    .then(data => {
+        document.getElementById("username").textContent = data.username;
+    });
+});
+
     </script>
     <button onclick="window.location.href='php/logout.php'">Logout</button>
-
-</body>
+  </body>
 </html>
